--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,5 +53,8 @@ exclude_lines = [
     "raise NotImplementedError",
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
+    "\\.\\.\\.",
+    "@(abc\\.)?abstractmethod",
+    "class .*\\(.*Protocol.*\\):",
 ]
 fail_under = 80
