--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,19 @@ Thumbs.db
 
 # UV
 uv.lock
+
+# Node.js / Frontend
+node_modules/
+.next/
+out/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+package-lock.json
+
+# Environment files
+.env
+.env.local
+.env.*.local
