--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,30 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "better-auth": "^1.3.4",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.559.0",
     "next": "^16.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "better-auth": "^1.3.4",
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "typescript": "^5.3.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
-    "@playwright/test": "^1.40.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/jest-dom": "^6.1.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^16.0.0"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=20.0.0",
