chore: Clean up file migrations and documentation
- Remove old component files from frontend/components (moved to src/)
- Remove old lib files (moved to src/lib)
- Update tsconfig.json paths
- Add design contracts and component type definitions
- Update specs documentation
- Add prompt history tracking

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,13 @@
     "jsx": "react-jsx",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
       ]
     },
     "plugins": [
@@ -37,6 +43,11 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "tests",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
   ]
 }
