--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:15-alpine
-    container_name: todo-postgres
+    container_name: dobot-postgres
     environment:
       POSTGRES_USER: todo_user
       POSTGRES_PASSWORD: todo_password
@@ -20,7 +20,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: todo-backend
+    container_name: dobot-backend
     environment:
       DATABASE_URL: postgresql://todo_user:todo_password@postgres:5432/todo_app
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-dev-secret-change-in-production}
@@ -44,7 +44,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: todo-frontend
+    container_name: dobot-frontend
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000
       BETTER_AUTH_SECRET: ${BETTER_AUTH_SECRET:-dev-secret-change-in-production}
