--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-multipart>=0.0.6",
     "psycopg2-binary>=2.9.9",
     "alembic>=1.13.0",
+    "cryptography>=42.0.0",
 ]
 
 [project.optional-dependencies]
