--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,20 +3,20 @@ FROM python:3.13-slim
 WORKDIR /app
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    PORT=8080
 
 RUN pip install --no-cache-dir uv
 
-# Install dependencies first for better layer caching
+# Install deps (creates a local .venv)
 COPY pyproject.toml uv.lock ./
-RUN uv sync --system --frozen --no-dev
+RUN uv sync --frozen --no-dev --no-install-project
 
 # App source
 COPY alembic.ini ./
 COPY migrations ./migrations
 COPY src ./src
 
-ENV PORT=8080
 EXPOSE 8080
 
-CMD ["sh", "-c", "uvicorn src.api.main:app --host 0.0.0.0 --port ${PORT}"]
+CMD ["sh", "-c", "uv run uvicorn src.api.main:app --host 0.0.0.0 --port ${PORT}"]
