--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -16,8 +16,8 @@ primary_region = "iad"
   internal_port = 8080
   force_https = true
   auto_start_machines = true
-  auto_stop_machines = "stop"
-  min_machines_running = 0
+  auto_stop_machines = false
+  min_machines_running = 1
   processes = ["app"]
 
 [[vm]]
